[package]
name = "retrochat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures = "0.3.30"
irc = "0.15.0"
parking_lot = "0.12.1"
raylib = "3.7.0"
tokio = { version = "1.36.0", features = ["full"] }
